--- a/css/master_a-p_g_-maestra.css
+++ b/css/master_a-p_g_-maestra.css
@@ -1,1 +1,1 @@
-#u97-4{font-weight:300;background-color:transparent;font-size:28px;line-height:34px;font-family:address-sans-pro-condensed, sans-serif;color:#FFFFFF;text-align:center;}#u102{background-color:transparent;}
+#u97-4{color:#FFFFFF;line-height:34px;font-size:28px;font-weight:300;font-family:address-sans-pro-condensed, sans-serif;background-color:transparent;text-align:center;}#u102{background-color:transparent;}
